package com.jovisco.tutorial.patterns.abstractfactory.partsexample;

public abstract class AbstractPartsFactory {

    abstract Gpu createGpu();
    abstract Monitor createMonitor();
}
