package com.jovisco.tutorial.patterns.abstractfactory.partsexample;

public interface Gpu extends Part {}
