package com.jovisco.tutorial.patterns.abstractfactory.partsexample;

public interface Monitor extends Part {}
