package com.jovisco.tutorial.patterns.abstractfactory.partsexample;

public interface Part {

    void assemble();
}
